--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/animation-propertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/animation-propertyeditor.html
@@ -1,31 +1,29 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="textfield-propertyeditor">
+<dom-module id="animation-propertyeditor">
     <template>
         <style include="shared-styles"></style>
-        <div class="field">
-            <label for="inputfield">[[label]]</label>
-            <input type="text" id="inputfield" name="inputfield" value="{{value}}" on-blur="updateData">
-        </div>
+
+        <span class="field">
+            <label for="image">[[label]]</label>
+            <img id="image" class="width-2" src="{{url}}">
+        </span>
+
     </template>
     <script>
         Polymer({
-            is: 'textfield-propertyeditor',
+            is: 'animation-propertyeditor',
 
             properties: {
                 label: {
                     type: String,
                     notify: true
                 },
-                value: {
+                url: {
                     type: String,
                     notify: true
                 }
-            },
-
-            updateData: function() {
-                this.value = this.$.inputfield.value;
             },
 
             ready: function() {
