--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
@@ -3,6 +3,15 @@
 <dom-module id="shared-styles">
     <template>
         <style>
+
+            .width-4 {
+                width: 25%;
+            }
+
+            .width-2 {
+                width: 50%;
+            }
+
             .field {
                 background-color: white;
                 width: 100%;
@@ -15,6 +24,7 @@
                 background-color: #bdc3c7;
                 color: black;
                 text-align: left;
+                padding-left: 2px;
             }
 
             .field input[type=text],
