--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/animation-propertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/animation-propertyeditor.html
@@ -3,7 +3,7 @@
 
 <dom-module id="animation-propertyeditor">
     <template>
-        <style include="shared-styles"></style>
+        <style include="property-shared-styles"></style>
 
         <span class="field">
             <label for="image">[[label]]</label>
