--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<dom-module id="shared-styles">
+<dom-module id="property-shared-styles">
     <template>
         <style>
 
