--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/textarea-propertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/textarea-propertyeditor.html
@@ -3,7 +3,7 @@
 
 <dom-module id="textarea-propertyeditor">
     <template>
-        <style include="shared-styles"></style>
+        <style include="property-shared-styles"></style>
         <div class="field">
             <label for="text">[[label]]</label>
             <textarea id="text" name="text" on-blur="updateData">{{value}}</textarea>
