--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/twofield-propertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/twofield-propertyeditor.html
@@ -3,7 +3,7 @@
 
 <dom-module id="twofield-propertyeditor">
     <template>
-        <style include="shared-styles"></style>
+        <style include="property-shared-styles"></style>
         <div class="field width-2">
             <label for="field1">[[label1]]</label>
             <input type="text" id="field1" name="field1" value="{{value1}}" on-blur="updateData1">
