--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/checkbox-propertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/checkbox-propertyeditor.html
@@ -3,7 +3,7 @@
 
 <dom-module id="checkbox-propertyeditor">
     <template>
-        <style include="shared-styles"></style>
+        <style include="property-shared-styles"></style>
         <div class="field">
             <label for="checkbox">[[label]]</label>
             <input type="checkbox" id="checkbox" name="checkbox" checked$="{{value}}" on-click="updateData">
