--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/color-propertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/color-propertyeditor.html
@@ -3,7 +3,7 @@
 
 <dom-module id="color-propertyeditor">
     <template>
-        <style include="shared-styles"></style>
+        <style include="property-shared-styles"></style>
         <div class="field">
             <label for="inputfield">[[label]]</label>
             <input type="color" id="inputfield" name="inputfield" value="{{value}}" on-change="updateData">
