--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
@@ -4,12 +4,16 @@
     <template>
         <style>
 
-            .width-4 {
+            .width-2 {
                 width: 25%;
             }
 
-            .width-2 {
+            .width-4 {
                 width: 50%;
+            }
+
+            .width-6 {
+                width: 75%;
             }
 
             .field {
