--- a/gameengine-editor/src/main/webapp/webcomponents/global/gameeditor-separator.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/global/gameeditor-separator.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="global-separator">
+<dom-module id="gameeditor-separator">
     <template>
         <style include="global-shared-styles"></style>
 
@@ -9,7 +9,7 @@
     </template>
     <script>
         Polymer({
-            is: 'global-separator',
+            is: 'gameeditor-separator',
 
             properties: {
                 text: {
