--- a/gameengine-editor/src/main/webapp/webcomponents/tree/gameeditor-treeitem.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/tree/gameeditor-treeitem.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="tree-item">
+<dom-module id="gameeditor-treeitem">
     <template>
         <style include="tree-shared-styles"></style>
 
@@ -9,7 +9,7 @@
     </template>
     <script>
         Polymer({
-            is: 'tree-item',
+            is: 'gameeditor-treeitem',
 
             properties: {
                 text: {
