--- a/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
@@ -25,6 +25,38 @@
                 vertical-align: middle;
                 background-color: #565d65;
             }
+
+            .tabpane {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
+            }
+
+            .tabpane .content {
+                flex-grow: 10;
+            }
+
+            .tabpane .buttons {
+                flex-direction: row;
+                display: flex;
+                height: 1.8em;
+                line-height: 1.8em;
+                background-color: #e74c3c;
+            }
+            .tabpane .buttons .button {
+                color: white;
+                margin-left: 1em;
+                padding: 0.2em;
+                background-color: #e74c3c;
+            }
+            .tabpane .buttons .button:hover {
+                background-color: #4a5058;
+            }
+            .tabpane .buttons .selected {
+                background-color: #4a5058;
+            }
+
         </style>
     </template>
 </dom-module>
