--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/gameeditor-fontpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/gameeditor-fontpropertyeditor.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="font-propertyeditor">
+<dom-module id="gameeditor-fontpropertyeditor">
     <template>
         <style include="property-shared-styles"></style>
 
@@ -19,7 +19,7 @@
     </template>
     <script>
         Polymer({
-            is: 'font-propertyeditor',
+            is: 'gameeditor-fontpropertyeditor',
 
             properties: {
                 label1: {
