--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/gameeditor-twofieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/gameeditor-twofieldpropertyeditor.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="twofield-propertyeditor">
+<dom-module id="gameeditor-twofieldpropertyeditor">
     <template>
         <style include="property-shared-styles"></style>
         <div class="field width-2">
@@ -15,7 +15,7 @@
     </template>
     <script>
         Polymer({
-            is: 'twofield-propertyeditor',
+            is: 'gameeditor-twofieldpropertyeditor',
 
             properties: {
                 label1: {
