--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -49,6 +49,8 @@
 
     <link rel="import" href="webcomponents/global/gameeditor-separator.html">
     <link rel="import" href="webcomponents/global/gameeditor-tabbedpane.html">
+
+    <link rel="import" href="webcomponents/content/gameeditor-sceneeditor.html">
 </head>
 <body onload="main()">
 <div class="grid flexVertical">
@@ -86,18 +88,7 @@
 
     </div>
     <div class="gridItem width-8 border-1 grow flexHorizontal">
-        <gameeditor-tabbedpane class="grow">
-            <div class="separator flexVertical shrink">
-                <input type="checkbox" value="Not selected"/>
-                <label>Snap to grid</label>
-                <label class="emoffset-4">Grid X:</label>
-                <input type="text" class="emwidth-2" value="5">
-                <label>Y:</label>
-                <input type="text" class="emwidth-2" value="5">
-                <button class="emwidth-6 emoffset-4" id="previewbutton">Preview!</button>
-            </div>
-            <canvas id="html5canvas" class="grow">
-            </canvas>
+        <gameeditor-tabbedpane class="grow" id="editortabbedpane">
         </gameeditor-tabbedpane>
     </div>
     <div class="gridItem width-3 border-1 shrink min-width-3 objectTree" id="objecttree">
