Working on tabbed pane and editor component.

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -89,6 +89,7 @@
     </div>
     <div class="gridItem width-8 border-1 grow flexHorizontal">
         <gameeditor-tabbedpane class="grow" id="editortabbedpane">
+            <gameeditor-sceneeditor></gameeditor-sceneeditor>
         </gameeditor-tabbedpane>
     </div>
     <div class="gridItem width-3 border-1 shrink min-width-3 objectTree" id="objecttree">
