--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -51,6 +51,8 @@
     <link rel="import" href="webcomponents/global/gameeditor-tabbedpane.html">
 
     <link rel="import" href="webcomponents/content/gameeditor-sceneeditor.html">
+    <link rel="import" href="webcomponents/content/gameeditor-eventsheeteditor.html">
+    <link rel="import" href="webcomponents/content/gameeditor-ruleeditor.html">
 </head>
 <body onload="main()">
 <div class="grid flexVertical">
@@ -97,15 +99,19 @@
         <gameeditor-treeitem level="3" text="Item Level 3" draggable="true"></gameeditor-treeitem>
         <gameeditor-treeitem level="2" text="Item Level 2"></gameeditor-treeitem>
     </div>
-<!--
+
     <script>
-        var theTab = document.getElementById("editortabbedpane");
-        var theEditor1 = document.createElement("gameeditor-sceneeditor");
-        var theEditor2 = document.createElement("gameeditor-sceneeditor");
+        /*var theTab = document.getElementById("editortabbedpane");
         theTab.clearAll();
-        theTab.addTab("Editor", theEditor1);
-        theTab.addTab("Editor", theEditor2);
-    </script>-->
+
+        var theEditor2 = document.createElement("gameeditor-eventsheeteditor");
+        theTab.addTab("Eventsheet", theEditor2);
+
+        var theRule = document.createElement("gameeditor-ruleeditor");
+        theRule.rulename().value = 'Test';
+        Polymer.dom(theEditor2).appendChild(theRule);
+        */
+    </script>
 </div>
 
 </body>
